--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
 		"start:example": "lerna exec npm run start --scope=dooringx-example",
 		"start:doc": "lerna exec npm run start --scope=dooringx-dumi-doc",
 		"build": "lerna exec npm run build --scope=dooringx-lib",
+		"build:example": "lerna exec npm run build --scope=dooringx-example",
 		"deploy": "lerna exec npm run docs:build --scope=dooringx-dumi-doc",
-    "build:cli":"lerna exec npm run build --scope=dooringx-cli",
+    	"build:cli":"lerna exec npm run build --scope=dooringx-cli",
 		"pub": "node ./script/publish.js",
 		"changelog": "node ./script/changelog.js",
 		"translate": "node ./script/translate.js",
